--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,58 @@
-@charset "UTF-8";/*variables para los colores*//*variables para tipografías*/body {
+@charset "UTF-8";/*variables para los colores*//*variables para tipografías*/.hero-backgorund {
+  background-image: url("../../images/cover.jpg");
+  background-size: cover;
+  background-position: center;
+  height: 100%;
+  background-repeat: no-repeat;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.hamburguer {
+  background-color: #0271bc;
+  width: 44px;
+  height: 44px;
+  position: absolute;
+  top: 0;
+  z-index: 1;
+  -ms-flex-line-pack: center;
+  align-content: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+.button-next-section {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  background-color: #ffffff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+body {
   font-family: "Roboto", sans-serif;
   color: #000000;
   font-size: 18px;
@@ -16,6 +70,7 @@
 .subtitle-hero {
   color: #ffffff;
   font-size: 16px;
+  font-weight: 400;
 }
 
 .pretitle-section {
@@ -84,6 +139,32 @@
 
 .left {
   text-align: left;
+}
+
+.uppercase {
+  text-transform: uppercase;
+}
+
+.no-margin {
+  margin: 0;
+}
+
+.margin-top-regular {
+  margin-top: 45px;
+}
+
+.margin-bottom-regular {
+  margin-bottom: 53px;
+}
+
+* {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+body,html {
+  height: 100%;
+  margin: 0;
 }
 
 /*# sourceMappingURL=main.css.map */
