--- a/scss/core/_helpers.scss
+++ b/scss/core/_helpers.scss
@@ -1,8 +1,14 @@
-.no-margin {
-  margin: 0;
-}
+.no-margin {margin: 0;}
+.general-margin {margin: 0 15px;}
+.list-margin {margin: 0 70px;}
+.button-margin {margin: auto;}
 
-.margin-top-regular {margin-top: 45px};
+.margin-top-s {margin-top: 30px;}
+.margin-top-regular {margin-top: 45px;}
 
+.margin-bottom-regular {margin-bottom: 53px;}
+.margin-bottom-big {margin-bottom: 60px;}
 
-.margin-bottom-regular {margin-bottom: 53px};
+.padding-top-s {padding-top: 30px;}
+
+.link-style-none {text-decoration: none;}
