--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,6 +11,7 @@
 @import "components/burguer";
 @import "components/buttons";
 @import "components/typography";
+@import "components/list";
 
 @import "pages/home";
 
