--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";/*variables para los colores*//*variables para tipografías*/.backgorund-dark-color {
+@charset "UTF-8";/*variables para los colores*//*variables para tipografías*//*varables para medias*/.backgorund-dark-color {
   background-color: #304268;
   width: 100%;
   height: 100%;
@@ -85,6 +85,16 @@
   justify-content: center;
 }
 
+.button-positive:hover {
+  border: 2px solid #304268;
+  background-color: #304268;
+}
+
+.transition-postive {
+  -webkit-transition: background-color ease-in-out 1s, border ease-in-out 1s;
+  transition: background-color ease-in-out 1s, border ease-in-out 1s;
+}
+
 .button-negative {
   background-color: #f26002;
   height: 45px;
@@ -92,8 +102,18 @@
   border-radius: 25px;
 }
 
+.button-negative:hover {
+  background-color: #304268;
+}
+
+.transition-negative {
+  -webkit-transition: background-color ease-in-out 1s;
+  transition: background-color ease-in-out 1s;
+}
+
 .button-top {
   line-height: 0;
+  margin: -15px;
 }
 
 body {
@@ -161,6 +181,10 @@ body {
   line-height: 45px;
 }
 
+.button-font-positive:hover {
+  color: #ffffff;
+}
+
 .button-font-negative {
   color: #ffffff;
   font-size: 20px;
@@ -222,12 +246,24 @@ ul {
   margin: auto;
 }
 
+.margin-top-negative {
+  margin-top: -25px;
+}
+
 .margin-top-s {
   margin-top: 30px;
 }
 
 .margin-top-regular {
   margin-top: 45px;
+}
+
+.margin-bottom-small {
+  margin-bottom: 15px;
+}
+
+.margin-bottom-m {
+  margin-bottom: 45px;
 }
 
 .margin-bottom-regular {
@@ -254,6 +290,102 @@ ul {
 body,html {
   height: 100%;
   margin: 0;
+}
+
+@media all and (min-width: 768px) {
+  .wrapper {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+  }
+
+  .list-item1 {
+    grid-column: span 2;
+  }
+
+  .list-item2 {
+    grid-column: span 2;
+  }
+
+  .list-item3 {
+    grid-column: span 2;
+  }
+
+  body {
+    font-size: 20px;
+  }
+
+  .tilte-hero {
+    font-size: 80px;
+    line-height: 106px;
+  }
+
+  .subtitle-hero {
+    font-size: 24px;
+  }
+
+  .title-section {
+    font-size: 26px;
+    line-height: 45px;
+  }
+
+  .highlight-content {
+    font-size: 24px;
+  }
+
+  .general-margin {
+    margin: 0 39px;
+  }
+
+  .list-margin {
+    margin: 0 38px;
+  }
+
+  .margin-bottom-m {
+    margin-bottom: 60px;
+  }
+
+  .margin-tablet {
+    margin-bottom: 20px;
+  }
+}
+
+@media all and (min-width: 1024px) {
+  .wrapper {
+    grid-template-columns: repeat(12, 1fr);
+  }
+
+  .list-item1 {
+    grid-column: span 4;
+  }
+
+  .list-item2 {
+    grid-column: span 4;
+  }
+
+  .list-item3 {
+    grid-column: span 4;
+  }
+
+  .tilte-hero {
+    font-size: 100px;
+    line-height: 132px;
+  }
+
+  .pretitle-section {
+    font-size: 16px;
+  }
+
+  .title-section {
+    font-size: 32px;
+  }
+
+  .general-margin {
+    margin: 0 275px;
+  }
+
+  .list-margin {
+    margin: 0 85px;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
