--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -15,6 +15,15 @@
   width: 76px;
   display: flex;
   justify-content: center;
+  &:hover {
+      border: 2px solid $color-primary-dark;
+      background-color: $color-primary-dark;
+    }
+}
+.transition-postive {
+  transition:
+  background-color ease-in-out 1s,
+  border ease-in-out 1s;
 }
 
 .button-negative {
@@ -22,6 +31,15 @@
   height: 45px;
   width: 184px;
   border-radius: 25px;
+  &:hover {
+      background-color: $color-primary-dark;
+    }
+}
+.transition-negative {
+  transition: background-color ease-in-out 1s;
 }
 
-.button-top {line-height: 0;}
+.button-top {
+  line-height: 0;
+  margin: -15px;
+}
