--- a/scss/core/_helpers.scss
+++ b/scss/core/_helpers.scss
@@ -1,13 +1,49 @@
 .no-margin {margin: 0;}
-.general-margin {margin: 0 15px;}
-.list-margin {margin: 0 70px;}
+.general-margin {
+  margin: 0 15px;
+
+  @media all and (min-width: $media-tablet) {
+    margin: 0 39px;
+  }
+  @media all and (min-width: $media-desktop) {
+    margin: 0 275px;
+  }
+}
+
+.list-margin {
+  margin: 0 70px;
+
+  @media all and (min-width: $media-tablet) {
+    margin: 0 38px;
+  }
+  @media all and (min-width: $media-desktop) {
+    margin: 0 85px;
+  }
+}
+
+
 .button-margin {margin: auto;}
 
+.margin-top-negative {margin-top: -25px;}
 .margin-top-s {margin-top: 30px;}
 .margin-top-regular {margin-top: 45px;}
 
+.margin-bottom-small {margin-bottom: 15px;}
+.margin-bottom-m {
+  margin-bottom: 45px;
+
+  @media all and (min-width: $media-tablet) {
+    margin-bottom: 60px;
+  }
+}
+
 .margin-bottom-regular {margin-bottom: 53px;}
 .margin-bottom-big {margin-bottom: 60px;}
+.margin-tablet {
+  @media all and (min-width: $media-tablet) {
+    margin-bottom: 20px;
+  }
+}
 
 .padding-top-s {padding-top: 30px;}
 
