--- a/scss/core/_variables.scss
+++ b/scss/core/_variables.scss
@@ -44,3 +44,7 @@ $font-color-primary-midtone: $color-primary-light-midtone;
 $font-color-primary-dark: $color-primary-dark;
 $font-color-secundary: $color-secundary;
 $font-color-secundary-dark: $color-secundary-dark;
+
+/*varables para medias*/
+$media-tablet: 768px;
+$media-desktop: 1024px;
