trying to change color of svg - not working

--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -7,6 +7,9 @@
   justify-content: center;
   align-items: center;
 }
+svg:hover #ico-scroll-down {
+  fill: red;
+}
 
 .button-positive {
   border: 2px solid $color-secundary;
