--- a/scss/core/_variables.scss
+++ b/scss/core/_variables.scss
@@ -2,6 +2,7 @@
 $color-light: #ffffff;
 $color-dark-midtone: #4a4a4a;
 $color-dark: #000000;
+$color-dark-shadow: rgba(0,0,0,0.2);
 
 $color-primary-light: #e2f1f9;
 $color-primary-light-midtone: #8ccbea;
