--- a/css/main.css
+++ b/css/main.css
@@ -136,6 +136,7 @@ body {
 .tilte-hero {
   font-family: "Roboto Slab", serif;
   color: #ffffff;
+  text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.2);
   font-size: 42px;
   line-height: 55px;
 }
