--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,12 @@
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
+  -webkit-transition: background-color ease-in-out 0.5s;
+  transition: background-color ease-in-out 0.5s;
+}
+
+.hamburguer:hover {
+  background-color: #f26002;
 }
 
 .button-scroll {
@@ -77,8 +83,8 @@ svg:hover #ico-scroll-down,svg:hover #ico-arrow {
 }
 
 svg #ico-scroll-down,svg #ico-arrow {
-  -webkit-transition: fill ease-in-out 1s;
-  transition: fill ease-in-out 1s;
+  -webkit-transition: fill ease-in-out 0.5s;
+  transition: fill ease-in-out 0.5s;
 }
 
 .button-positive {
@@ -92,6 +98,8 @@ svg #ico-scroll-down,svg #ico-arrow {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
+  -webkit-transition: background-color ease-in-out 0.5s, border ease-in-out 0.5s;
+  transition: background-color ease-in-out 0.5s, border ease-in-out 0.5s;
 }
 
 .button-positive:hover {
@@ -99,25 +107,17 @@ svg #ico-scroll-down,svg #ico-arrow {
   background-color: #304268;
 }
 
-.transition-postive {
-  -webkit-transition: background-color ease-in-out 1s, border ease-in-out 1s;
-  transition: background-color ease-in-out 1s, border ease-in-out 1s;
-}
-
 .button-negative {
   background-color: #f26002;
   height: 45px;
   width: 184px;
   border-radius: 25px;
+  -webkit-transition: background-color ease-in-out 0.5s;
+  transition: background-color ease-in-out 0.5s;
 }
 
 .button-negative:hover {
   background-color: #304268;
-}
-
-.transition-negative {
-  -webkit-transition: background-color ease-in-out 1s;
-  transition: background-color ease-in-out 1s;
 }
 
 .button-top {
