--- a/scss/core/_helpers.scss
+++ b/scss/core/_helpers.scss
@@ -45,6 +45,10 @@
   }
 }
 
+.margin-left-menu {margin-left: 15px;}
+
 .padding-top-s {padding-top: 30px;}
 
 .link-style-none {text-decoration: none;}
+
+.hidden {display: none;}
