--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,6 +12,7 @@
 @import "components/buttons";
 @import "components/typography";
 @import "components/list";
+@import "components/menu";
 
 @import "pages/home";
 
