--- a/scss/core/_variables.scss
+++ b/scss/core/_variables.scss
@@ -1,5 +1,6 @@
 /*variables para los colores*/
 $color-light: #ffffff;
+$color-light-transparent: rgba(255,255,255,0.95);
 $color-dark-midtone: #4a4a4a;
 $color-dark: #000000;
 $color-dark-shadow: rgba(0,0,0,0.2);
