--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -50,3 +50,18 @@
     background-color: $color-primary-dark;
   }
 }
+
+.button-style {
+  padding: 0;
+	border: 0;
+	border-radius: 0;
+  outline: none;
+  background-color: none;
+}
+
+.background-menu-link {
+  transition: background-color ease-in-out 0.5s;
+  &:hover {
+    background-color: rgba($color-primary-light, 0.8);
+  }
+}
