--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -44,3 +44,5 @@ svg #ico-scroll-down, svg #ico-arrow {
   line-height: 0;
   margin: -15px;
 }
+
+.button-shadow {box-shadow: 0px 2px 4px $color-dark-shadow-strong;}
