--- a/scss/core/_variables.scss
+++ b/scss/core/_variables.scss
@@ -4,6 +4,7 @@ $color-light-transparent: rgba(255,255,255,0.95);
 $color-dark-midtone: #4a4a4a;
 $color-dark: #000000;
 $color-dark-shadow: rgba(0,0,0,0.2);
+$color-dark-shadow-strong: rgba(0,0,0,0.5);
 
 $color-primary-light: #e2f1f9;
 $color-primary-light-midtone: #8ccbea;
@@ -25,7 +26,7 @@ $font-size-l: 24px;
 $font-size-xl: 26px;
 $font-size-xxl: 32px;
 $font-size-big: 42px;
-$font-size-bigger: 80px;
+$font-size-bigger: 90px;
 $font-size-hero: 100px;
 
 $font-line-height-xs: 30px;
