--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -3,6 +3,7 @@
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   }
+  grid-gap: 30px;
   @media all and (min-width: $media-desktop) {
   grid-template-columns: repeat(12, 1fr);
   }
