--- a/css/main.css
+++ b/css/main.css
@@ -255,7 +255,7 @@ ul {
   background-color: rgba(255, 255, 255, 0.95);
   position: absolute;
   width: 276px;
-  left: -4000px;
+  left: -100%;
   -webkit-transition: left ease 1s;
   transition: left ease 1s;
 }
